[project]
name = "plc-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksei",email = "u_alex90@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "sqlalchemy[asyncio] (>=2.0.37,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"

